--------------------------------------------------------------------------------
Fusion 1.209 - January ??. 20003
--------------------------------------------------------------------------------


- 01-10-04: Fixed Alcolyte Skill Cure [Darkhelmet]
- 01-10-04: Added Support For Green Herbs [Darkhelmet]
- 01-10-04: Minor fix to damage calculation- [Oatmeal12345]
- 01-10-04: Added Algorith to Poison character [Darkhelmet]
- 01-10-04: Added Monster SKill Sonic Blows - [Darkhelmet + Oatmeal12345]
- 01-10-04: Added monster skill NPC_Posion, waiting on procedure from Dark-[Oatmeal12345[
- 01-10-04: Added monster skill Npc_Energydrain-[Oatmeal12345]
- 01-10-04: Added monster skill NPC_Blodddrain -[Oatmeal12345]
- 01-10-04: Added monster skill Npc_Darkbreath- [Oatmeal12345]
- 01-10-04: Added monster skill NPC_Magicalattack-[Oatmeal12345]
- 01-10-04: Added monster skill NPC_Telekineis -[Oatmeal12345]
- 01-10-04: Added monster skill NPC_COMBO-[Oatmeal12345]
- 01-10-04: Fixed Monk Triple Attack Damage Calculations. [AlexKreuz]
- 01-08-04: Updated Intimidate, wait to warp after the attack. [Darkhelmet]
- 01-08-04: Added Raid, commented out the old Raid. [Oatmeal12345]
- 01-08-04: Added Acid Terror commented out the old acid terror. [Oatmeal12345]
- 01-08-04: Added Body relocation commented out the old body relocation. [Oatmeal12345]
- 01-08-04: Added Cast time for monsters.  Cast is before skill though.  [Darkhelmet]
- 01-07-04: Added AutoSave option to Weiss.ini (Integer in seconds). [AlexKreuz]
- 01-06-04: Updated Steal and Snatcher [Colus]
- 01-06-04: Fixed Venom Dust [Darkhelmet]
- 01-04-04: Updated Combo skills damage increased by a little -[Oatmeal12345]
- 01-04-04: Updated Call spirits, calls one spirit per call-[Oatmeal12345]
- 01-04-04: updated Damage Calculations for Grandcross damage now based on Attk + MATK, instead of just physical-[Oatmeal12345]
- 01-04-04: Updated Intimidate, still not perfect but stopped crash.   [Darkhelmet]