@@ -346,6 +346,14 @@ begin
                         dmg[0] := dmg[0] * tc.Skill[5].Data.Data1[tsAI.SkillLV[i]] div 100;
                         SendMSkillAttack(tm, tc, ts, tsAI, Tick, 1, i);
                 end;
+                170:    {Npc- Critical}
+                begin
+                        MobSkillDamageCalc(tm, tc, ts, tsAI, Tick);
+                        if dmg[0] < 0 then dmg[0] := 0;
+                        dmg[0] := dmg[0] * tc.Skill[170].Data.Data1[tsAI.SkillLV[i]] div 100;
+                        SendMSkillAttack(tm, tc, ts, tsAI, Tick, 1, i);
+                end;
+
                 171:    {Npc-combo hit}
                 begin
                         MobSkillDamageCalc(tm, tc, ts, tsAI, Tick);
@@ -567,6 +575,16 @@ begin
                         tc.isPoisoned := True;
                         tc.PoisonTick := tick + 15000;
                         PoisonCharacter(tm, tc, Tick);
+                end;
+                177:    {Blind Attack}
+                begin
+                        MobSkillDamageCalc(tm, tc, ts, tsAI, Tick);
+                        if dmg[0] < 0 then dmg[0] := 0;
+                        //dmg[0] := dmg[0] * tc.Skill[176].Data.Data1[tsAI.SkillLV[i]] div 100;
+                        SendMSkillAttack(tm, tc, ts, tsAI, Tick, 1, i);
+                        tc.isBlind := True;
+                        tc.BlindTick := tick + 15000;
+                        BlindCharacter(tm, tc, Tick);
                 end;
         end;
 
