@@ -3,6 +3,7 @@ Fusion 1.209 - January ??. 20003
 --------------------------------------------------------------------------------
 
 
+- 01-10-04: Added monster Skill Blind [Darkhelmet]
 - 01-10-04: Fixed Alcolyte Skill Cure [Darkhelmet]
 - 01-10-04: Added Support For Green Herbs [Darkhelmet]
 - 01-10-04: Minor fix to damage calculation- [Oatmeal12345]
